--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,6 +11,36 @@
   font-weight: bold;
 }
 
+.arrow{
+  max-width: 18%;
+  margin-top: 30px;
+  margin-right: 10px;
+}
+
+.field.is-grouped {
+  display: flex;
+  align-items: center;
+}
+
+.login-page, .reg-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: rgba(211, 211, 211, 0.95);
+}
+
+.login-form, .reg-form{
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  width: 100%;
+  margin: 0 20px;
+}
+
+
 @media screen and (max-width: 768px) {
   .hero.is-fullheight-mobile {
     height: 100vh;
@@ -20,5 +50,7 @@
     font-size: 20px;
     font-weight: bold;
   }
+
+
 
 }
