--- a/static/css/main.css
+++ b/static/css/main.css
@@ -39,6 +39,10 @@
   width: 100%;
   margin: 0 20px;
 }
+.user:hover .has-text-white {
+  color: blue;
+}
+
 
 
 @media screen and (max-width: 768px) {
