--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,16 +12,35 @@
 
 </head>
 <body>
- <section class="hero is-fullheight" style="background-image: url('https://images.unsplash.com/photo-1611974789855-9c2a0a7236a3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80')">
-    <div class="navbar-end">
-      {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}" class="navbar-item is-pulled-right"><span class="icon is-medium has-text-white" style="background-color: firebrick;"><i class="fas fa-sign-out-alt"></i></span></a>
-      {% else %}
-        <a href="{% url 'register' %}" class="navbar-item is-pulled-right"><span class="icon is-medium has-text-white" style="background-color: darkgreen;"><i class="fas fa-user-plus"></i></span></a>
-        <a href="{% url 'login' %}" class="navbar-item is-pulled-right"><span class="icon is-medium has-text-white" style="background-color: #b6b667"><i class="fas fa-sign-in-alt"></i></span></a>
-      {% endif %}
-        <a href="/" class="navbar-item is-pulled-right"><span class="icon is-medium has-text-white" style="background-color: cornflowerblue;"><i class="fas fa-home"></i></span></a>
-    </div>
+<section class="hero is-fullheight" style="background-image: url('{% static 'img/background.avif' %}')">
+
+<div class="navbar-item is-flex is-justify-content-space-between">
+  <div class="navbar-start">
+    {% if user.is_authenticated %}
+       <a href="/" class="navbar-item"><span class="icon is-medium has-text-white" style="background-color: rgba(0,25,115,0.93);"><i class="fas fa-user"></i></span>
+        <span class="has-text-red" style="color:rgba(128,169,94,0.89); margin: auto 0; margin-left: 5px"><strong>{{ user.username }}</strong></span></a>
+    {% endif %}
+  </div>
+  <div class="navbar-end">
+    {% if user.is_authenticated %}
+      <a href="{% url 'logout' %}" class="navbar-item is-pulled-right"><span class="icon is-medium has-text-white" style="background-color: firebrick;"><i class="fas fa-sign-out-alt"></i></span></a>
+    {% else %}
+      <a href="{% url 'register' %}" class="navbar-item is-pulled-right"><span class="icon is-medium has-text-white" style="background-color: darkgreen;"><i class="fas fa-user-plus"></i></span></a>
+      <a href="{% url 'login' %}" class="navbar-item is-pulled-right"><span class="icon is-medium has-text-white" style="background-color: #b6b667"><i class="fas fa-sign-in-alt"></i></span></a>
+    {% endif %}
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
     {% block content%}
     {% endblock %}
   </section>
